DuPont DevSB/src/objects/Validation_Score__c.object
<CustomObject>
    <description>Calculates &quot;fit&quot; across various considerations</description>
    <fields>
        <fullName>Application_Quality__c</fullName>
        <description>Application Quality</description>
        <inlineHelpText>Application Quality</inlineHelpText>
        <label>Application Quality</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Significant defects exist</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Some defects exist</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-No defects exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_UI_integration_requirements__c</fullName>
        <description>What are the application/UI integration requirements?</description>
        <inlineHelpText>What are the application/UI integration requirements?</inlineHelpText>
        <label>Application/UI Integration Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Extensive passing required</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Simple Context Passing (Fire and Forget)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Validation Scores</relationshipLabel>
        <relationshipName>Validation_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Audit_requirements__c</fullName>
        <description>What are the audit needs?</description>
        <inlineHelpText>What are the audit needs?</inlineHelpText>
        <label>Audit Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Page View &amp; Data Auditing</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Data only</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branding_Requirements__c</fullName>
        <description>Describe the use of custom branding within the applicaiton</description>
        <inlineHelpText>Describe the use of custom branding within the applicaiton</inlineHelpText>
        <label>Branding Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - All Custom Branding</fullName>
                </value>
                <value>
                    <fullName>2 -</fullName>
                </value>
                <value>
                    <fullName>3 - Some Custom, Mostly Standard</fullName>
                </value>
                <value>
                    <fullName>4  -</fullName>
                </value>
                <value>
                    <fullName>5 - All Standard Salesforce Branding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_vs_Buy_Score__c</fullName>
        <label>Build vs. Buy Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_vs_Buy__c</fullName>
        <description>Are there packaged applications that would meet the customer&apos;s needs without significant customization?</description>
        <inlineHelpText>Is there a packaged application that would meet customer needs that is not available on the AppExchange?</inlineHelpText>
        <label>Buy vs Build</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Complexity_Indicator__c</fullName>
        <formula>IF((Calculated_Complexity_Score__c ) &gt; 80, &quot;Low&quot;, 
IF(AND((Calculated_Complexity_Score__c ) &gt; 70, Calculated_Complexity_Score__c &lt;= 80), &quot;Low to Medium&quot;, 
IF(AND((Calculated_Complexity_Score__c) &gt; 40, Calculated_Complexity_Score__c&lt;= 70), &quot;Medium&quot;, 
IF(AND((Calculated_Complexity_Score__c*100)&gt; 20, Calculated_Complexity_Score__c&lt;= 40), &quot;Medium to High&quot; , 
IF(AND((Calculated_Complexity_Score__c *100)&gt; 0, Calculated_Complexity_Score__c&lt;= 20), &quot;High&quot; , 
IF((Calculated_Complexity_Score__c*100) == 0, &quot;N/A&quot;, 
null 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Complexity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Complexity_Score_Percent__c</fullName>
        <formula>Calculated_Complexity_Score__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity Score (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Complexity_Score__c</fullName>
        <label>Calculated Complexity Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Current_User_Percept_Ind__c</fullName>
        <formula>IF((Calculated_Current_User_Perception__c ) &gt; 80, &quot;Poor&quot;, 
IF(AND((Calculated_Current_User_Perception__c ) &gt; 70, Calculated_Current_User_Perception__c  &lt;= 80), &quot;Poor to Average&quot;, 
IF(AND((Calculated_Current_User_Perception__c ) &gt; 40, Calculated_Current_User_Perception__c &lt;= 70), &quot;Average&quot;, 
IF(AND((Calculated_Current_User_Perception__c )&gt; 20, Calculated_Current_User_Perception__c &lt;= 40), &quot;Well-Received&quot; , 
IF(AND((Calculated_Current_User_Perception__c )&gt; 0, Calculated_Current_User_Perception__c &lt;= 20), &quot;High&quot; , 
IF((Calculated_Current_User_Perception__c ) == 0, &quot;N/A&quot;, 
null 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Current User Percept Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Current_User_Perception__c</fullName>
        <label>Calculated Current User Perception</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Force_Fit_Indicator__c</fullName>
        <formula>If (Regulatory_Limitations_Score__c = 1, &quot;Red&quot;, 
IF(Calculated_Force_Fit_Score__c  &gt; 1, &quot;Red&quot;, 
IF(Calculated_Force_Fit_Score__c  =1, &quot;Yellow&quot;, 
IF(Calculated_Force_Fit_Score__c  = 0, &quot;Green&quot;, 
null 
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Force Fit Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Force_Fit_Score__c</fullName>
        <formula>Real_time_Transaction_Volumes_Score__c +  Computational_Intensive_Score__c +   Response_Time_Score__c  +   Build_vs_Buy_Score__c +  Regulatory_Limitations_Score__c +  Tolerate_Maintenance_Windows_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Force Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Force_Fit__c</fullName>
        <formula>IMAGE( 
If ( Regulatory_Limitations_Score__c = 1, &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;,
IF(Calculated_Force_Fit_Score__c &gt; 1, &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;, 
IF(Calculated_Force_Fit_Score__c = 1, &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF(Calculated_Force_Fit_Score__c = 0, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;)))), 
&quot;Fit&quot; 
) &amp;  &quot; (&quot; &amp; TEXT(Calculated_Force_Fit_Score__c )&amp; &quot; Flags Raised)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Force Fit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Pilot_Fit_Indicator__c</fullName>
        <formula>IF((Calculated_Pilot_Score2__c*100) &gt; 80, &quot;Strong&quot;, 
 IF(AND((Calculated_Pilot_Score2__c *100) &gt; 70, Calculated_Pilot_Score2__c &lt;= 80), &quot;Good&quot;, 
   IF(AND((Calculated_Pilot_Score2__c*100) &gt; 50, Calculated_Pilot_Score2__c &lt;= 70), &quot;Questionable&quot;, 
      IF(AND((Calculated_Pilot_Score2__c *100)&gt; 20, Calculated_Pilot_Score2__c &lt;= 50), &quot;Not Good&quot; , 
        IF(AND((Calculated_Pilot_Score2__c *100)&gt; 0, Calculated_Pilot_Score2__c &lt;= 20), &quot;Not Good&quot; ,
          IF((Calculated_Pilot_Score2__c*100) == 0, &quot;N/A&quot;,
            null
     )
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pilot Fit Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Pilot_Fit__c</fullName>
        <formula>IMAGE( 
If ((Calculated_Pilot_Score2__c * 100) &gt; 80, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 75, (Calculated_Pilot_Score2__c*100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 50, (Calculated_Pilot_Score2__c *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 20, (Calculated_Pilot_Score2__c * 100) &lt;= 50), &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;, 
IF((Calculated_Pilot_Score2__c*100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp; Calculated_Pilot_Fit_Indicator__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Apps that are of:
Low complexity 
Low to Medium Usage
Current User Perception is Poor</inlineHelpText>
        <label>Pilot Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Pilot_Score2__c</fullName>
        <formula>IF ( ISPICKVAL(Type__c, &quot;New Application&quot;),  Calculated_Pilot_Score__c / 100,  Calculated_Pilot_Score__c / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Score (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Pilot_Score__c</fullName>
        <label>Calculated Pilot Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Risk_Usage_Score__c</fullName>
        <formula>Calculated_Usage_Risk_Score__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk/Usage Score (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Usage_Indicator__c</fullName>
        <formula>IF(( Calculated_Usage_Risk_Score__c ) &gt; 80, &quot;Low&quot;, 
IF(AND((Calculated_Usage_Risk_Score__c  ) &gt; 70, Calculated_Usage_Risk_Score__c &lt;= 80), &quot;Low to Medium&quot;, 
IF(AND((Calculated_Usage_Risk_Score__c ) &gt; 40, Calculated_Usage_Risk_Score__c &lt;= 70), &quot;Medium&quot;, 
IF(AND((Calculated_Usage_Risk_Score__c)&gt; 20, Calculated_Usage_Risk_Score__c &lt;= 40), &quot;Medium to High&quot; , 
IF(AND((Calculated_Usage_Risk_Score__c )&gt; 0, Calculated_Usage_Risk_Score__c &lt;= 20), &quot;High&quot; , 
IF((Calculated_Usage_Risk_Score__c *100) == 0, &quot;N/A&quot;, 
null 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Usage Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Usage_Risk_Score__c</fullName>
        <label>Calculated Usage / Risk Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_User_Perception_Score__c</fullName>
        <formula>Calculated_Current_User_Perception__c  /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated User Perception Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Centralized_Database_Storage_Score__c</fullName>
        <label>Centralized Database Storage Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <formula>IMAGE( 
If ((Calculated_Complexity_Score_Percent__c *100) &gt; 80, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Complexity_Score_Percent__c *100) &gt; 75, (Calculated_Complexity_Score_Percent__c *100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Complexity_Score_Percent__c *100) &gt; 40, (Calculated_Complexity_Score_Percent__c *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF(AND((Calculated_Complexity_Score_Percent__c*100 ) &gt; 20, (Calculated_Complexity_Score_Percent__c *100) &lt;= 40), &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;, 
IF((Calculated_Complexity_Score_Percent__c *100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp; Calculated_Complexity_Indicator__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity (Cost)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computational_Intensive_Score__c</fullName>
        <label>Computational Intensive Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Computational_Intensive__c</fullName>
        <description>Does the application require extremely large number of calculations per transaction (e.g. multi-dimensional data analysis such as required by certain scientific applications)</description>
        <inlineHelpText>Does the application require extremely large number of calculations per transaction (e.g. multi-dimensional data analysis such as required by certain scientific applications)</inlineHelpText>
        <label>Computationally Intensive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Requirements__c</fullName>
        <label>Content Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEED INPUT FROM TOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness__c</fullName>
        <description>Cost Effectiveness</description>
        <inlineHelpText>Cost Effectiveness</inlineHelpText>
        <label>Cost Effectiveness</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Very Cost Effective</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Expensive, but manageable</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Too Expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_User_Perception_Percent__c</fullName>
        <formula>Calculated_Current_User_Perception__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Perception (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_User_Perception__c</fullName>
        <formula>IMAGE( 
If ((Calculated_User_Perception_Score__c *100) &gt; 80, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_User_Perception_Score__c  *100) &gt; 75, (Calculated_User_Perception_Score__c  *100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_User_Perception_Score__c  *100) &gt; 40, (Calculated_User_Perception_Score__c *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF(AND((Calculated_User_Perception_Score__c *100 ) &gt; 20, (Calculated_User_Perception_Score__c  *100) &lt;= 40), &quot;servlet/servlet.FileDownload?file= 01580000001Neqn&quot;, 
IF((Calculated_User_Perception_Score__c *100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp; Calculated_Current_User_Percept_Ind__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Perception (Reward)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Warehousing_OLAP_Processing__c</fullName>
        <description>Data Warehousing/OLAP Processing</description>
        <inlineHelpText>Data Warehousing/OLAP Processing</inlineHelpText>
        <label>Data Warehousing/OLAP Processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Many custom reports w/ complex analytical queries</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Few custom reports w/ complex analytical queries</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-All custom reports do not require complex analytical queries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downtime_Impact__c</fullName>
        <description>Impact to the organization if this application is not available?</description>
        <inlineHelpText>Impact to the organization if this application is not available?</inlineHelpText>
        <label>Downtime Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Catastrophic</fullName>
                </value>
                <value>
                    <fullName>2-Major</fullName>
                </value>
                <value>
                    <fullName>3-Moderate</fullName>
                </value>
                <value>
                    <fullName>4-Minor</fullName>
                </value>
                <value>
                    <fullName>5-None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ease_of_Data_Extraction__c</fullName>
        <description>Ease of Data Extraction</description>
        <inlineHelpText>Ease of Data Extraction</inlineHelpText>
        <label>Ease of Data Extraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-No Direct DB, API, or File Extracts Avail</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-File extract ONLY</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Direct DB or API Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ease_of_Use__c</fullName>
        <description>Ease of Use</description>
        <inlineHelpText>Ease of Use</inlineHelpText>
        <label>Ease of Use</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Very easy</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Average</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Very Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encryption_Requirements__c</fullName>
        <description>Does the application require accessed data to be encrypted when stored on the database server?</description>
        <inlineHelpText>Does the application require accessed data to be encrypted when stored on the database server?</inlineHelpText>
        <label>Encryption Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Unique client encryption methodology</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Standard SFDC encryption</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-No encryption needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Integration_Requirements__c</fullName>
        <label>Entitlement Integration Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Requires Integration to Entitlements System with Frequent Mass Realignments (Monthly, Quarterly)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Requires Integration to Entitlements System  with Infrequent Mass Realignments (Annually)</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-No Integration Required, Salesforce is the System of Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlements_Requirements__c</fullName>
        <label>Entitlements Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Territory or Group Based Non-Hierarchal Structure</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Territory or Group Based Hierarchal Structure</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Organizational Role Hierarchy Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <description>File Size</description>
        <inlineHelpText>File Size</inlineHelpText>
        <label>File Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Avg. file size over 10 MB</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Most files under 10 MB</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-All files under 10 MB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Force_Fit_Indicator__c</fullName>
        <label>Force Fit Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSAppRecType__c</fullName>
        <formula>IF(Application__r.RecordTypeId=&apos;01230000000Gd8g&apos;,&quot;Existing application&quot;,&quot;New Application&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSAppRecType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value_Candidate_Indicator__c</fullName>
        <formula>IF((Calculated_Pilot_Score2__c*100) &gt; 80, &quot;Strong&quot;, 
IF(AND((Calculated_Pilot_Score2__c *100) &gt; 70, Calculated_Pilot_Score2__c &lt;= 80), &quot;Good&quot;, 
IF(AND((Calculated_Pilot_Score2__c*100) &gt; 50, Calculated_Pilot_Score2__c &lt;= 70), &quot;Good&quot;, 
IF(AND((Calculated_Pilot_Score2__c *100)&gt; 20, Calculated_Pilot_Score2__c &lt;= 50), &quot;Questionable&quot; , 
IF(AND((Calculated_Pilot_Score2__c *100)&gt; 0, Calculated_Pilot_Score2__c &lt;= 20), &quot;Not Good&quot; , 
IF((Calculated_Pilot_Score2__c*100) == 0, &quot;N/A&quot;, 
null 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Value Candidate Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value_Candidate__c</fullName>
        <formula>IMAGE( 
If ((Calculated_Pilot_Score2__c * 100) &gt; 80, &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 75, (Calculated_Pilot_Score2__c*100) &lt;= 80), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 50, (Calculated_Pilot_Score2__c *100) &lt;= 75), &quot;servlet/servlet.FileDownload?file= 01580000001Neqm&quot;, 
IF(AND((Calculated_Pilot_Score2__c * 100) &gt; 20, (Calculated_Pilot_Score2__c * 100) &lt;= 50), &quot;servlet/servlet.FileDownload?file= 01580000001Neqo&quot;, 
IF((Calculated_Pilot_Score2__c*100) &lt;= 20, &quot;servlet/servlet.FileDownload?file= 01530000000raJN&quot;,&quot;servlet/servlet.FileDownload?file= 01580000001Neql&quot;))))), 
&quot;Fit&quot; 
) &amp; &quot; (&quot;&amp; High_Value_Candidate_Indicator__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Apps that are of: 
Low to Meduim Complexity 
Medium to High Usage 
Current User Perception is Poor to Average</inlineHelpText>
        <label>High Value Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Innovation_Growth_Speed_Market__c</fullName>
        <description>Product Innovation/Growth and Speed to Market</description>
        <inlineHelpText>Product Innovation/Growth and Speed to Market</inlineHelpText>
        <label>Innovation/Growth + Speed to Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Easy to make chg, w/ low effort/cost</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-New req w/ moderate cost/effort</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-New req w/ high effort/costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_capabilities_of_other_system__c</fullName>
        <description>Integration capabilities of other systems</description>
        <inlineHelpText>Integration capabilities of other systems</inlineHelpText>
        <label>Integration capabilities of other system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-File-based CSV format not acceptable</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-File-based ONLY CSV acceptable</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-File-based CSV, Direct DB or Standards based API acceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_timing__c</fullName>
        <description>What are the interface timing requirements?</description>
        <inlineHelpText>What are the interface timing requirements?</inlineHelpText>
        <label>Interface timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Real-time interface</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Some RT/Some Batch</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_or_External_Workflow__c</fullName>
        <description>Is the application workflow logic primarily contained within the application or thru email notifications (e.g., no callouts or updates to other systems applications in real time)?</description>
        <inlineHelpText>Is the application workflow logic primarily contained within the application or thru email notifications (e.g., no callouts or updates to other systems applications in real time)?</inlineHelpText>
        <label>Internal or External Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Workflow to external systems</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3-Workflow with Email component</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-Workflow to internal system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Backlog__c</fullName>
        <description>Maintenance Backlog</description>
        <inlineHelpText>Maintenance Backlog</inlineHelpText>
        <label>Maintenance Backlog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High &gt;6 mnths effort</fullName>
                </value>
                <value>
                    <fullName>Medium 3-6 mnths effort</fullName>
                </value>
                <value>
                    <fullName>Low &lt; 3 mnths effort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>